# cyclosynth

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  comparison_468.py  cyclosynth.pyi  plot_comparison.py  plot_comparison_sqrtt.py  plot_comparison_sqrtt_slope.py  pyproject.toml  rust-toolchain.toml  setup.py  sigma.py  test.py
.github/workflows/: ci.yml
benchmarks/: baseline_2026-04-30.txt
cyclosynth/: __init__.py  algebra.py  bandb.py  bandb2.py  bandb3.py  bandb4.py  bandb5.py  bandb6.py  bandb7.py  bloch.py  cliffords.py  convex.py  ellipse.py  general_ratio.py  gridsynth.py  intenum.py  matrix.py  operator.py  ratio.py  reduction.py  translation.py  utils.py
cyclosynth-rs/: Cargo.toml  README.md  buddy.md  ideas.md  pyproject.toml
cyclosynth-rs/benchmarks/: baseline_2026-04-30.txt
cyclosynth-rs/src/: lib.rs
cyclosynth-rs/src/algebra/: domega.rs  dyadic_complex.rs  mod.rs  ring_root2.rs  ring_root_root2_plus2.rs
cyclosynth-rs/src/bloch/: cliffords.rs  decomposer.rs  mod.rs  translation.rs
cyclosynth-rs/src/matrix/: factories.rs  mod.rs  so3.rs  u2.rs
cyclosynth-rs/src/ratio/: alg_int.rs  integer_ratio.rs  mod.rs  over_root2.rs  over_root_root2_plus2.rs  ratio_entry.rs
cyclosynth-rs/src/rings/: mod.rs  zomega.rs  zzeta.rs
cyclosynth-rs/src/synthesis/: cliffords.rs  decomposer.rs  diag.rs  lenstra.rs  lenstra_heavy.rs  lenstra_integer.rs  lenstra_light.rs  lenstra_quad_audit.rs  mod.rs  search.rs  synthesizer.rs  synthesizer2.rs  synthesizer3.rs
cyclosynth-rs/src/synthesis/lenstra/: integer.rs  light.rs
examples/: choosing_epsilon.py  compare_t_vs_sqrtt.py  compare_t_vs_sqrtt_gates.py  lifted_baseline.py  optimize_cost.py  synth.py  synth_sqrtt.py  synthesize_sqrtt.py  synthesize_t.py  u1_u2_u3.py  verify.py
scripts/: _cost.py  _plotstyle.py  analyze_sweep_deep_eps.py  comparison.py  comparison_gridsynth.py  comparison_sqrtt.py  gather_rz.py  gather_rz_series.py  gather_u3.py  gridsynth_real.py  plot_comparison.py  plot_comparison_sqrtt.py  plot_comparison_sqrtt_slope.py  plot_comparison_sqrtt_violin.py  plot_cost_violin.py  plot_cost_vs_eps.py  plot_cost_vs_eps_3way.py  plot_cost_weight_sweep.py  plot_runtime.py  profile_summary.py  recompute_csv_cost.py  recompute_grid_rz.py  runtime_comparison_sqrtt.py  sweep_deep_eps.py
scripts/data/: rz.csv  u3.csv
src/: lib.rs  verify_n6_lattice.rs  verify_n6_lattice_path.rs  verify_n6_search.rs
src/matrix/: mod.rs  so3.rs  u2.rs
src/rings/: mod.rs  types.rs  zomega.rs  zomicron.rs  zupsilon.rs  zzeta.rs
src/synthesis/: angle.rs  brute_search_zeta.rs  clifford_pi12.rs  clifford_pi6.rs  clifford_sqrt_t.rs  clifford_t.rs  cliffords.rs  cost_bound.rs  decomposer.rs  diag.rs  distance.rs  mod.rs  search.rs  search_zeta.rs  sigma.rs  synthesizer.rs
src/synthesis/clifford_sqrt_t/: brute.rs  first_hit.rs  mod.rs  optimal.rs  prefix.rs  probes.rs  recon.rs  tests.rs
src/synthesis/clifford_t/: mod.rs  probes.rs  tests.rs
src/synthesis/lattice/: backend.rs  cholesky_lu.rs  common.rs  integer.rs  lll.rs  mod.rs  q_metric.rs  scratch.rs  se.rs
src/synthesis/lattice/omega/: brute.rs  cholesky_lu.rs  integer.rs  lll.rs  mod.rs  q_metric.rs  scratch.rs  se.rs
src/synthesis/lattice/zeta/: bkz.rs  brute.rs  cholesky_lu.rs  dd.rs  integer.rs  lll.rs  lll_f64.rs  mod.rs  probes.rs  q_metric.rs  scratch.rs  se.rs  tests.rs
src/synthesis/lattice_common/: mod.rs
src/synthesis/lattice_omicron/: cholesky_lu.rs  integer.rs  lll.rs  mod.rs  q_metric.rs  scratch.rs  se.rs
src/synthesis/lattice_upsilon/: bkz.rs  cholesky_lu.rs  enumerate.rs  integer.rs  lll.rs  lll_f64.rs  mitm.rs  mitm_half_se.rs  mod.rs  q_metric.rs  se.rs  sigma.rs  synthesize.rs
src/synthesis/lattice_zeta/: bkz.rs  cholesky_lu.rs  integer.rs  lll_f64.rs  mod.rs  q_metric.rs  scratch.rs  se.rs  tests.rs
src/synthesis/lenstra/: integer.rs  lll.rs  mod.rs  q_metric.rs  scratch.rs  se.rs
src/synthesis/lenstra_common/: mod.rs
src/synthesis/lenstra_zeta/: bkz.rs  cholesky_lu.rs  integer.rs  lll.rs  lll_f64.rs  mod.rs  q_metric.rs  scratch.rs  se.rs
synth/: pyvenv.cfg
tests/: bullet_prune_effectiveness.rs  bullet_prune_soundness.rs  diagnose_n12_1e4.rs  measure_n12_bkz.rs  mitm_gate3_regression.rs  mitm_lll_se_soundness.rs  mitm_payoff.rs  mitm_soundness.rs  n8_vs_n12_step0_n8_eps_sweep.rs  n8_vs_n12_step12_funnel.rs  probe_gate3_miss.rs  probe_k24_lattice.rs  prototype_n12_completion.rs  qt_guard_1e5.rs  t_identity_1e5.rs  test_algebra.py  test_bloch.py  test_convex.py  test_ellipse.py  test_gridsynth.py  test_intratios.py  test_matrix.py  test_operator.py  test_ratios.py  test_reduction.py  test_translation.py  test_utils.py  trace_n12_deep_eps.rs  verify_n12_deep_precision.rs  verify_n12_oracle.rs  verify_n6_lattice.rs  verify_n6_lattice_path.rs  verify_n6_search.rs
