[package]
name = "cyclosynth"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

[lib]
name = "cyclosynth"
crate-type = ["cdylib", "rlib"]

[dependencies]
num-complex = "0.4"
i256 = "0.2.3"
rayon = "1.10"
rug = { version = "1", default-features = false, features = ["float", "integer"] }
gmp-mpfr-sys = "1.7"
pyo3 = { version = "0.22", optional = true, features = ["extension-module", "num-complex"] }
numpy = { version = "0.22", optional = true }

[dev-dependencies]
rand = "0.9"

# Index-based loops in the lattice kernels mirror the matrix math they
# implement; iterator rewrites obscure the correspondence with the paper's
# pseudocode. The arg-count lint is allowed per-function on the hot
# walkers (lockstep-edit contract: do not bundle their params).
[lints.clippy]
needless_range_loop = "allow"

[profile.release]
debug = 1

[features]
default = []
python = ["dep:pyo3", "dep:numpy"]
# Diagnostic telemetry (trace counters, per-phase timers). OFF by default:
# without it, `diag::trace_enabled()` is a compile-time `false` and every
# `if trace_enabled()` block (including the per-leaf hot path) is eliminated,
# so the default build carries zero telemetry overhead. Enable for the probe
# bins and the `#[ignore]` telemetry tests.
trace = []
