[package]
name = "cyclosynth"
version = "0.1.0"
edition = "2021"
# Floor set by our own source: `is_multiple_of` (clifford_sqrt_t/optimal.rs)
# stabilized in 1.87 (clippy::incompatible_msrv flags anything lower). Deps
# (rug 1.x, pyo3 0.22, rayon 1.10) are all ≤1.65; [lints] tables need 1.74.
# Not verified with an older toolchain; installed toolchain is 1.93.
rust-version = "1.87"
license-file = "LICENSE"

[lib]
name = "cyclosynth"
crate-type = ["cdylib", "rlib"]

# Walk-bench probes runtime-assert `diag::trace_enabled()`; gate them at
# compile time so a featureless `cargo build --bins` skips them. The other
# bins in src/bin are auto-discovered as usual.
[[bin]]
name = "probe_walk_bench_omega"
path = "src/bin/probe_walk_bench_omega.rs"
required-features = ["trace"]

[[bin]]
name = "probe_walk_bench_zeta"
path = "src/bin/probe_walk_bench_zeta.rs"
required-features = ["trace"]

[dependencies]
num-complex = "0.4"
i256 = "0.2.3"
rayon = "1.10"
rug = { version = "1", default-features = false, features = ["float", "integer"] }
gmp-mpfr-sys = "1.7"
pyo3 = { version = "0.22", optional = true, features = ["extension-module", "num-complex"] }

[dev-dependencies]
rand = "0.9"

# Index-based loops in the lattice kernels mirror the matrix math they
# implement; iterator rewrites obscure the correspondence with the paper's
# pseudocode. The arg-count lint is allowed per-function on the hot
# walkers (lockstep-edit contract: do not bundle their params).
[lints.rust]
unused_qualifications = "warn"
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
needless_range_loop = "allow"
unwrap_used = "warn"
cast_lossless = "warn"

[profile.release]
debug = 1

[features]
default = []
python = ["dep:pyo3"]
# Diagnostic telemetry (trace counters, per-phase timers). OFF by default:
# without it, `diag::trace_enabled()` is a compile-time `false` and every
# `if trace_enabled()` block (including the per-leaf hot path) is eliminated,
# so the default build carries zero telemetry overhead. Enable for the probe
# bins and the `#[ignore]` telemetry tests.
trace = []
