[package]
name = "cyclosynth"
version = "0.1.0"
edition = "2021"

[lib]
name = "cyclosynth"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
num-complex = "0.4"
i256 = "0.2.3"
rayon = "1.10"

[dev-dependencies]
rand = "0.9"

[profile.release]
debug = 1

[features]
python = []
