[package]
name = "cyclosynth"
version = "0.1.0"
edition = "2021"

[lib]
name = "cyclosynth"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
num-complex = "0.4"
i256 = "0.2.3"
rayon = "1.10"
twofloat = "0.8"
rug = { version = "1", default-features = false, features = ["float", "integer"] }
gmp-mpfr-sys = "1.7"
hyperprec = "0.3"

[dev-dependencies]
rand = "0.9"

[profile.release]
debug = 1

[features]
python = []
profiling = []
